# otel-bug-fix-sample

./: main.py  pyproject.toml
